[gd_scene load_steps=3 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://scenes/city_view.tscn" id="2_cityview"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="CityView" parent="." instance=ExtResource("2_cityview")]

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="HUD/TopBar"]
layout_mode = 2

[node name="FundsLabel" type="Label" parent="HUD/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "$20,000"

[node name="DateLabel" type="Label" parent="HUD/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Jan 1900"

[node name="SpeedLabel" type="Label" parent="HUD/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "â–¶ Normal"

[node name="PopLabel" type="Label" parent="HUD/TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Pop: 0"

[node name="Spacer" type="Control" parent="HUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "WASD/Arrows: Pan | Scroll: Zoom | Space: Pause | 1-4: Speed | Ctrl+O: Open"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open City"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.cty ; City Files")

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
